--- a/WADWolfram/pom.xml
+++ b/WADWolfram/pom.xml
@@ -32,5 +32,9 @@
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
         </dependency>
+        <dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mustache</artifactId>
+		</dependency>
     </dependencies>
 </project>
