--- a/WADWolfram/pom.xml
+++ b/WADWolfram/pom.xml
@@ -5,6 +5,7 @@
     
     <groupId>com.mycompany</groupId>
     <artifactId>WADWolfram</artifactId>
+    <packaging>jar</packaging>
     <version>0.1.0</version>
 
     <parent>
@@ -56,4 +57,14 @@
 		</dependency>
 		
     </dependencies>
+    <build>
+		<plugins>
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+		</plugins>
+		<finalName>SpringDocker</finalName>
+	</build>
+    
 </project>
